# shenlun-agent

./: .env.example  .gitignore  API_DESIGN.md  ARCHITECTURE.md  CLAUDE.md  DATA_MODEL.md  DB_INDEX_OPTIMIZATION.md  DB_SCHEMA.md  DIRECTORY_STRUCTURE.md  MVP_PLAN.md  OPEN_SOURCE_INTRO.md  PROGRESS.md  PROJECT.md  README.md  ROLE_DESIGN.md
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/app/agents/: analyzer.py  outline_generator.py  reviewer.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  exceptions.py  logging.py  response.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  ai_config.py  answer.py  email.py  practice_record.py  prompt_template.py  question.py  review.py  role.py  user.py  user_role.py
backend/app/modules/: __init__.py
backend/app/repositories/: ai_config_repo.py  email_repo.py  practice_repo.py  user_repo.py
backend/app/schemas/: admin_user.py  ai_config.py  auth.py  common.py  email.py  practice.py  review.py
backend/app/services/: ai_config_service.py  auth_service.py  email_service.py  practice_service.py  user_service.py
backend/app/shared/: constants.py  (+5 more)
backend/materials/: m1.txt  m2.txt  m3.txt  m4.txt  m5.txt
backend/scripts/: init_db.py
backend/sql/: index_optimization.sql  migrate_add_scope_and_new_tables.sql  review_chain_upgrade.sql  schema.sql
backend/tests/: test_ai_prompt_templates.py  test_ai_runtime_config.py  test_auth_api.py  test_library_api.py  test_practice_api.py  test_review_workflow.py  test_reviewer_agent.py
(+250 files in other folders)
